@@ -1,3 +1,10 @@
+2012-05-31 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCClospre.hpp:
+	  Fix handling of invalidating iCodes in lospre.
+	* src/SDCClospre.cc:
+	  Fix multiround-lospre.
+
 2012-05-31 Borut Razem <borut.razem AT gmail.com>
 
 	* debugger/mcs51/cmd.c: fixed bug #3530998 - source code bug..
